@@ -88,6 +88,14 @@ levelset = original
 ; The base directory where SDLPoP will look for custom levelsets. (default = mods)
 mods_folder = mods
 
+; Always use the music from the data/music directory, even for custom levelsets.
+; Note: Although the option is called "original", you can put custom music into the data/music directory.
+; See "Using custom music" in Readme.txt.
+always_use_original_music = false
+
+; Always use the graphics from the data directory, even for custom levelsets.
+always_use_original_graphics = false
+
 
 [AdditionalFeatures]
 ; Enable quicksave/load feature. (In-game: press F6 to quicksave, F9 to quickload)
